force-app/main/default/objects/Domain_Action_Binding__mdt/Domain_Action_Binding__mdt.object-meta.xml
<CustomObject>
    <description>Stores BINDINGS to cq_iDomainAction implementations for Trigger processing.</description>
    <label>CQ Domain Action Binding</label>
    <pluralLabel>CQ Domain Action Bindings</pluralLabel>
</CustomObject>