force-app/main/default/objects/Domain_Action_Binding__mdt/fields/Sequence__c.field-meta.xml
<CustomField>
    <fullName>Sequence__c</fullName>
    <description>Order in which to fire Trigger actions on the same SObject for the same Trigger state. Multiple can exist at the same Sequence.</description>
    <inlineHelpText>Order in which to fire Trigger actions on the same SObject for the same Trigger state. Multiple can exist at the same Sequence.</inlineHelpText>
    <label>Sequence</label>
    <precision>9</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>