force-app/main/default/objects/Domain_Action_Binding__mdt/fields/TriggeredWhen__c.field-meta.xml
<CustomField>
    <fullName>TriggeredWhen__c</fullName>
    <label>TriggeredWhen</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Insert</fullName>
                <default>true</default>
                <label>Insert</label>
            </value>
            <value>
                <fullName>Update</fullName>
            </value>
            <value>
                <fullName>Delete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>